samples/_failures_safe/1761800296_05cd3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebb78fc2.c: In function ‘main’:
./samples/SAFE/__tmp_ebb78fc2.c:162:9: error: expected expression at end of input
  162 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_ebb78fc2.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebb78fc2.c:162:9: error: expected declaration or statement at end of input
